add font - poppins

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/style.dist.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
 <body>
     <div class="m-10">
-        <button class="btn-primary">Primary
-            Button</button>
+        <button class="btn-primary">Primary Button</button>
     </div>
 </body>
 
