add jquery & js

--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 </head>
 
 <body>
-    <div class="m-10">
-        <button class="btn-primary">Primary Button</button>
-    </div>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
