add header & nav component

--- a/index.html
+++ b/index.html
@@ -12,6 +12,30 @@
 </head>
 
 <body>
+    <header class="bg-primary flex justify-center py-6">
+        <div class="container max-w-screen-xl">
+            <div class="flex items-center justify-between">
+                <div>
+                    <a href="#">
+                        <img class="w-36" src="./assets/img/logo.png" alt="Rajawali Guard Services">
+                    </a>
+                </div>
+                <nav>
+                    <ul class="flex items-center text-sm space-x-6 text-white">
+                        <li><a href="#">Beranda</a></li>
+                        <li><a href="#">Tentang Kami</a></li>
+                        <li><a href="#">SDM</a></li>
+                        <li><a href="#">Security Training</a></li>
+                        <li><a href="#">Layanan</a></li>
+                        <li><a href="#">Pendaftaran</a></li>
+                        <li><a href="#">Manajemen</a></li>
+                        <li><a href="#">Kontak</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
