--- a/index.html
+++ b/index.html
@@ -13,29 +13,43 @@
 
 <body>
     <header class="bg-primary flex justify-center py-6">
-        <div class="container max-w-screen-xl">
+        <div class="rgs-container">
             <div class="flex items-center justify-between">
                 <div>
                     <a href="#">
                         <img class="w-36" src="./assets/img/logo.png" alt="Rajawali Guard Services">
                     </a>
                 </div>
-                <nav>
+                <nav class="hidden lg:block">
                     <ul class="flex items-center text-sm space-x-6 text-white">
-                        <li><a href="#">Beranda</a></li>
-                        <li><a href="#">Tentang Kami</a></li>
-                        <li><a href="#">SDM</a></li>
-                        <li><a href="#">Security Training</a></li>
-                        <li><a href="#">Layanan</a></li>
-                        <li><a href="#">Pendaftaran</a></li>
-                        <li><a href="#">Manajemen</a></li>
-                        <li><a href="#">Kontak</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">Beranda</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">Tentang Kami</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">SDM</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">Security Training</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">Layanan</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">Pendaftaran</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">Manajemen</a></li>
+                        <li><a class="inline-block py-3 border-b-2 border-primary hover:border-white transition-all text-center"
+                                href="#">Kontak</a></li>
                     </ul>
                 </nav>
+                <button>
+                    <svg class="text-2xl text-white" stroke="currentColor" fill="none" stroke-width="0"
+                        viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                            d="M4 6h16M4 12h16m-7 6h7"></path>
+                    </svg>
+                </button>
             </div>
         </div>
     </header>
-
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
