--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <div class="rgs-container">
             <div class="flex items-center justify-between">
-                <a class="header-logo" href="#">
+                <a href="#">
                     <img class="w-36" src="./assets/img/logo.png" alt="Rajawali Guard Services">
                 </a>
                 <nav class="header-nav">
@@ -53,6 +53,13 @@
             </div>
         </div>
     </header>
+    <section class="banner">
+        <div class="banner-wrapper rgs-container">
+            <img class="banner-background" src="./assets/img/banner.png" alt="RGS Banner">
+            <div class="banner-content"> Pelayanan prima untuk <strong>menjaga</strong> dan <strong>mengamankan</strong>
+                aset pengguna jasa </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
