update About section

--- a/index.html
+++ b/index.html
@@ -60,6 +60,53 @@
                 aset pengguna jasa </div>
         </div>
     </section>
+    <section class="py-10 space-y-10 lg:py-20">
+        <div class="rgs-container">
+            <div class="flex items-center space-x-6">
+                <img class="hidden lg:block" src="./assets/img/about-desktop.png" alt="">
+                <div>
+                    <div class="text-primary font-semibold mb-6">Tentang Kami</div>
+                    <div class="text-primary font-bold mb-3 text-3xl">PT. ARYA SHAKTI UTAMA</div>
+                    <div class="space-y-3">
+                        <p>PT Arya Sakti Utama adalah perusahaan swasta nasional yang bergerak dibidang Jasa Pengamanan
+                            yang meliputi Penyedia Jasa Tenaga Pengamanan (Guard Services) dan Penyedia Jasa Pelatihan
+                            Keamanan (Security Training).</p>
+                        <p>Perusahaan kami memegang teguh komitmen untuk memberikan pelayanan yang terbaik kepada setiap
+                            pelanggan jasa. Tenaga Security kami akan menjalankan tugas untuk memberikan pelayanan
+                            sesuai kebutuhan pengguna jasa secara profesional, terintegrasi dan konsisten. </p>
+                        <p>PT Arya Shakti Utama berdiri berdasarkan Akta No. 13 Notaris Monika Yulianti Hadiwidjaja
+                            S.H., M.Kn. dan Akta Perubahan No 10 Notaris Monika Yulianti Hadiwidjaja S.H., M.Kn. dengan
+                            pengesahan dari Menkumham No. AHU-0017188.AH.01.01.Tahun 2020 Surat Ijin Operasional (SIO)
+                            berdasarkan Surat Keputusan Kapolri. Anggota Asosiasi Badan Usaha Jasa Pengamanan Indonesia
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="h-80 overflow-hidden lg:hidden">
+            <img class="block w-full h-full object-cover" src="./assets/img/about-mobile.png" alt="">
+        </div>
+        <div class="rgs-container">
+            <div class="space-x-2 mb-3">
+                <button id="aboutVisiButton" class="rgs-button outline">VISI</button>
+                <button id="aboutMisiButton" class="rgs-button">MISI</button>
+            </div>
+            <div class="border-2 border-gray-300 bg-gray-100 p-6 rounded-md">
+                <ol id="aboutVisi" class="list-decimal list-outside ml-3 hidden">
+                    <li>Visi menyiapkan dan menyediakan personel Satpam yang tangguh dan profesional.</li>
+                    <li>Melaksanakan pendidikan personel Satpam secara profesional </li>
+                    <li>Memperlakukan personel Satpam secara manusiawi sebagai aset perusahaan</li>
+                    <li>Mengutamakan kepuasan dan kepercayaan pengguna jasa Satpam</li>
+                </ol>
+                <ol id="aboutMisi" class="list-decimal list-outside ml-3">
+                    <li>Misi menyiapkan dan menyediakan personel Satpam yang tangguh dan profesional.</li>
+                    <li>Melaksanakan pendidikan personel Satpam secara profesional </li>
+                    <li>Memperlakukan personel Satpam secara manusiawi sebagai aset perusahaan</li>
+                    <li>Mengutamakan kepuasan dan kepercayaan pengguna jasa Satpam</li>
+                </ol>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
