update section sektor bisnis

--- a/index.html
+++ b/index.html
@@ -107,6 +107,51 @@
             </div>
         </div>
     </section>
+    <section class="sektor-bisnis py-20 bg-gray-100">
+        <div class="rgs-container">
+            <h1 class="text-xl font-semibold mb-16 text-primary text-center">SEKTOR BISNIS YANG MENJADI OBJEK PENGAMANAN
+            </h1>
+            <div class="flex justify-center flex-wrap">
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-1.png" alt="">
+                    <div class="text-center text-primary">PERBANKAN</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-2.png" alt="">
+                    <div class="text-center text-primary">PERUSAHAAN PERKEBUNAN</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-3.png" alt="">
+                    <div class="text-center text-primary">PERHOTELAN</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-4.png" alt="">
+                    <div class="text-center text-primary">PERUSAHAAN PERTAMBANGAN</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-5.png" alt="">
+                    <div class="text-center text-primary">KAWASAN INDUSTRI MANUFAKTUR</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-6.png" alt="">
+                    <div class="text-center text-primary">PERUMAHAN / APARTEMEN</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-7.png" alt="">
+                    <div class="text-center text-primary">INDUSTRI PENERBANGAN (AVIATION SECURITY) & TRANSPORTASI
+                        LAINNYA</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-8.png" alt="">
+                    <div class="text-center text-primary">PERORANGAN</div>
+                </div>
+                <div class="flex flex-col items-center w-60 p-4">
+                    <img class="mb-3" src="./assets/img/sektor-bisnis/icon-9.png" alt="">
+                    <div class="text-center text-primary">KAWASAN PERBELANJAAN</div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
