--- a/index.html
+++ b/index.html
@@ -152,6 +152,13 @@
             </div>
         </div>
     </section>
+    <section class="sdm">
+        <div class="sdm-banner relative overflow-hidden py-16 flex justify-center items-end">
+            <img class="absolute top-0 left-0 w-full h-full object-cover" src="./assets/img/sdm.png" alt="">
+            <div class="relative text-white text-xl bg-black bg-opacity-50 py-8 px-12 font-semibold">Sumber Daya Manusia
+                Rajawali Guard Services</div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
