update sdm section

--- a/index.html
+++ b/index.html
@@ -152,11 +152,75 @@
             </div>
         </div>
     </section>
-    <section class="sdm">
+    <section class="sdm mb-20">
         <div class="sdm-banner relative overflow-hidden py-16 flex justify-center items-end">
             <img class="absolute top-0 left-0 w-full h-full object-cover" src="./assets/img/sdm.png" alt="">
             <div class="relative text-white text-xl bg-black bg-opacity-50 py-8 px-12 font-semibold">Sumber Daya Manusia
                 Rajawali Guard Services</div>
+        </div>
+        <div class="rgs-container">
+            <p class="max-w-screen-md mx-auto text-center pt-20 mb-24">Perusahaan kami sangat mementingkan kualitas
+                dalam memberikan pelayanan kepada pengguna jasa dan oleh karena itu kami sangat memperhatikan dan
+                mengikuti tahapan management SDM didalam membentuk tenaga Satpam.</p>
+            <ul class="sdm-list list-outside ml-12 grid md:grid-cols-2 gap-12">
+                <li class="pl-2">
+                    <h1 class="relative -top-2 text-lg text-primary font-semibold">Perekrutan</h1>
+                    <div class="text-sm leading-relaxed">Perusahaan kami sangat mementingkan kualitas dalam memberikan
+                        pelayanan kepada pengguna jasa dan oleh karena itu kami sangat memperhatikan dan mengikuti
+                        tahapan management SDM didalam membentuk tenaga Satpam.</div>
+                </li>
+                <li class="pl-2">
+                    <h1 class="relative -top-2 text-lg text-primary font-semibold">Pendidikan</h1>
+                    <div class="text-sm leading-relaxed">
+                        <ul class="list-outside list-disc pl-4 space-y-1">
+                            <li>Mengikuit pelatihan Satpam (Gada Pratama, Gada Madya dan Gada Utama)</li>
+                            <li>Sertifikasi Kompetensi Satpam</li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="pl-2">
+                    <h1 class="relative -top-2 text-lg text-primary font-semibold">Pembinaan & Pelatihan</h1>
+                    <div class="text-sm leading-relaxed">
+                        <ul class="list-outside list-disc pl-4 space-y-1">
+                            <li>Pengasuhan (Kebersamaan dan Conseling)</li>
+                            <li>Kesiapsiagaan (Pelatihan Penyegaran dan Patroli Rutin ke Lokasi)</li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="pl-2">
+                    <h1 class="relative -top-2 text-lg text-primary font-semibold">Evaluasi Kinerja</h1>
+                    <div class="text-sm leading-relaxed">
+                        <ul class="list-outside list-disc pl-4 space-y-1">
+                            <li>Uji Kompetensi (Uji Bela Diri dan Review Sertifikasi Kompetensi)</li>
+                            <li>Penilaian Kinerja (Kehadiran, Disiplin, Pemenuhan Target, Laporan Kerja, komplain
+                                Pengguna Jasa)</li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="pl-2">
+                    <h1 class="relative -top-2 text-lg text-primary font-semibold">Performance Petugas Satpam</h1>
+                    <div class="text-sm leading-relaxed">
+                        <ul class="list-outside list-disc pl-4 space-y-1">
+                            <li>Kualitas Pribadi (Dedikasi, Jujur, Loyal, Berwibawa, Tanggung Jawab)</li>
+                            <li>Kualitas Performance (Postur, Kebersihan, Kesehatan dan Kekuatan)</li>
+                            <li>Kualitas Kinerja</li>
+                            <li>Kualitas Penampilan</li>
+                        </ul>
+                    </div>
+                </li>
+                <li class="pl-2">
+                    <h1 class="relative -top-2 text-lg text-primary font-semibold">Reward and Punishment</h1>
+                    <div class="text-sm leading-relaxed">
+                        <ul class="list-outside list-disc pl-4 space-y-1">
+                            <li>Penghargaan (Bonus, Penghargaan, Kenaikan Pangkat, Beasiswa utk anak)</li>
+                            <li>Sanksi (Peringatan Lisan, SP1 s/d SP3, Skorsing dan PHK)</li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
+            <p class="max-w-screen-lg mx-auto text-center pt-20 mb-28">Dengan melaksanakan tahapan management SDM
+                tersebut, perusahaan kami dapat menjaga kualitas, kompetensi dan profesionalitas dari tenaga Satpam yang
+                ditugaskan pada pengguna jasa.</p>
         </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
