update services section

--- a/index.html
+++ b/index.html
@@ -223,6 +223,36 @@
                 ditugaskan pada pengguna jasa.</p>
         </div>
     </section>
+    <section class="bg-primary py-20">
+        <div class="rgs-container flex flex-col space-y-8">
+            <div class="flex flex-col items-start text-white">
+                <h1 class="mb-6 text-xl font-semibold">Jasa Layanan Kami</h1>
+                <p class="w-2/3">Kami mempunyai beberapa Produk Unggulan Pengamanan, baik itu untuk perusahaan maupun
+                    untuk pribadi. Dengan motto "Your Comfort and safety is our responsibility" dan dikelola oleh tenaga
+                    profesional yang ahli di bidang pengamanan serta berbagai macam kompetensi yang dimiliki semaksimal
+                    mungkin kami akan menjaga kepercayaan yang diberikan, dengan menunjukkan pelayanan terbaik bagi
+                    setiap klien kami.</p>
+            </div>
+            <div class="flex items-center justify-end text-white text-right">
+                <div class="mr-6 w-2/3">
+                    <h1 class="mb-6 text-xl font-semibold">Jasa Layanan Kami</h1>
+                    <p>Menghadirkan Personel yang berkualitas, mengetahui dengan benar tugas serta tanggung jawabnya
+                        sebagai tenaga keamanan, mempunyai loyalitas yang tinggi dan "Mampu melihat apa yang orang lain
+                        tidak lihat".</p>
+                </div>
+                <img class="w-64" src="./assets/img/service/service-icon-1.png" alt="">
+            </div>
+            <div class="flex items-center justify-start text-white">
+                <img class="w-64" src="./assets/img/service/service-icon-2.png" alt="">
+                <div class="ml-6 w-2/3">
+                    <h1 class="mb-6 text-xl font-semibold">Jasa Pendidikan dan Pelatihan</h1>
+                    <p>Pendidikan dan Pelatihan disesuaikan dengan Kurikulum dari Mabes Polri Gada Pratama, Madya, dan
+                        Utama. Namun demikian, kami juga memberikan pelatihan yang bersifat khusus guna memenuhi
+                        kebutuhan klien apapun jenis bidang usahanya.</p>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
