add service-type section

--- a/index.html
+++ b/index.html
@@ -253,6 +253,51 @@
             </div>
         </div>
     </section>
+    <section>
+        <div class="relative">
+            <img class="w-full h-96 md:h-auto object-cover" src="./assets/img/services-type-banner.png" alt="">
+            <div
+                class="absolute bottom-32 max-10 left-1/2 transform -translate-x-1/2 max-auto block w-3/4 md:w-auto md:inline-block bg-black bg-opacity-50 px-10 py-5 text-xl leading-loose text-white font-semibold text-center">
+                <p>Jenis Pelatihan Keamanan</p>
+                <p>(SECURITY TRAINING)</p>
+            </div>
+        </div>
+        <div class="rgs-container relative -top-24">
+            <div class="grid sm:grid-cols-3 gap-5 md:gap-10 mb-10">
+                <div class="flex flex-col items-center shadow-lg pb-7 pt-5 px-10 rounded-lg bg-white">
+                    <img src="./assets/img/GP.png" alt="">
+                    <div class="text-center font-semibold">
+                        <p>Pelatihan Gada Pratama</p>
+                        <p>(232 JAM PELAJARAN)</p>
+                    </div>
+                </div>
+                <div class="flex flex-col items-center shadow-lg pb-7 pt-5 px-10 rounded-lg bg-white">
+                    <img src="./assets/img/GM.png" alt="">
+                    <div class="text-center font-semibold">
+                        <p>Pelatihan Gada Madya</p>
+                        <p>(160 JAM PELAJARAN)</p>
+                    </div>
+                </div>
+                <div class="flex flex-col items-center shadow-lg pb-7 pt-5 px-10 rounded-lg bg-white">
+                    <img src="./assets/img/GU.png" alt="">
+                    <div class="text-center font-semibold">
+                        <p>Pelatihan Gada Utama</p>
+                        <p>(100 JAM PELAJARAN)</p>
+                    </div>
+                </div>
+            </div>
+            <div class="leading-relaxed text-gray-700 space-y-5">
+                <p>Pelatihan dilaksanakan sesuai dengan kurikulum sebagaimana telah ditetapkan dalam Peraturan
+                    Kepolisian RI dengan instruktur yang qualified/berkualitas dan memiliki dedikasi tinggi serta
+                    kompetensi yang sesuai dengan bidang tugasnya. Pelatihan diselenggarakan oleh perusahan kami yang
+                    diawali oleh personel yang profesional dan telah berpengalaman dalam menlalankan pendidikan
+                    pembentukan.</p>
+                <p>Pelatihan Gada Pratama dan Gada Madya dilaksanakan di Bogor dengan fasilitas yang lengkap untuk
+                    pembentukan Satpam, sedangkan untuk Pelatihan Gada Utama dilaksanakan di Jakarta dengan fasilitas
+                    yang disesuaikan untuk tingkat manajer Satpam.</p>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
