add brosur section - banner

--- a/index.html
+++ b/index.html
@@ -298,6 +298,25 @@
             </div>
         </div>
     </section>
+    <section class="-mt-5 mb-10">
+        <div class="rgs-container mb-8">
+            <div class="text-center text-primary font-semibold text-xl">
+                <p>Pelatihan SATPAM Gada Pratama 2021 - 2022</p>
+                <p class="uppercase">rajawali guard services</p>
+            </div>
+        </div>
+        <div class="relative">
+            <img class="h-96 md:h-auto w-full object-cover" src="./assets/img/img-brosur1.png" alt="">
+            <div class="absolute top-10 w-full flex items-center justify-center space-x-12">
+                <img class="w-20" src="./assets/img/logo_RGS.png" alt="">
+                <img class="w-28" src="./assets/img/logo-abujpn.png" alt="">
+                <img class="w-24" src="./assets/img/logo-polda.png" alt="">
+            </div>
+            <div class="absolute bottom-0 transform translate-y-1/2 w-full flex items-center justify-center">
+                <img class="w-40" src="./assets/img/img-siapKerja.png" alt="">
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
