--- a/index.html
+++ b/index.html
@@ -308,12 +308,12 @@
         <div class="relative">
             <img class="h-96 md:h-auto w-full object-cover" src="./assets/img/img-brosur1.png" alt="">
             <div class="absolute top-10 w-full flex items-center justify-center space-x-12">
-                <img class="w-20" src="./assets/img/logo_RGS.png" alt="">
-                <img class="w-28" src="./assets/img/logo-abujpn.png" alt="">
-                <img class="w-24" src="./assets/img/logo-polda.png" alt="">
+                <img class="w-12 md:w-20" src="./assets/img/logo_RGS.png" alt="">
+                <img class="w-20 md:w-28" src="./assets/img/logo-abujpn.png" alt="">
+                <img class="w-16 md:w-24" src="./assets/img/logo-polda.png" alt="">
             </div>
             <div class="absolute bottom-0 transform translate-y-1/2 w-full flex items-center justify-center">
-                <img class="w-40" src="./assets/img/img-siapKerja.png" alt="">
+                <img class="w-28 md:w-40" src="./assets/img/img-siapKerja.png" alt="">
             </div>
         </div>
     </section>
