--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
         </div>
     </section>
-    <section class="-mt-5 mb-10">
+    <section id="brosur" class="-mt-5 mb-10">
         <div class="rgs-container mb-8">
             <div class="text-center text-primary font-semibold text-xl">
                 <p>Pelatihan SATPAM Gada Pratama 2021 - 2022</p>
@@ -314,6 +314,48 @@
             </div>
             <div class="absolute bottom-0 transform translate-y-1/2 w-full flex items-center justify-center">
                 <img class="w-28 md:w-40" src="./assets/img/img-siapKerja.png" alt="">
+            </div>
+        </div>
+        <div class="rgs-container mt-28">
+            <div class="mb-8 md:flex">
+                <img class="mb-8 md:mb-0 w-full md:w-1/2 mr-10 object-cover rounded-xl"
+                    src="./assets/img/brosur-image.png" alt="">
+                <div class="space-y-8">
+                    <div>
+                        <div class="text-primary font-semibold text-lg mb-3">Fasilitas yang diterima Peserta diklat
+                            satpam </div>
+                        <ul class="brosur-list space-y-3 text-gray-500 text-sm md:text-base">
+                            <li>Makan pagi, siang, dan malam, serta snack</li>
+                            <li>KTA Satpam & Ijazah Gada Pratama</li>
+                            <li>Materi dan Modul Pelatihan PIN Gada Pratma</li>
+                            <li>Kaos Rajawali Guard Services</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <div class="text-primary font-semibold text-lg mb-3">Materi Pelatihan</div>
+                        <ul class="brosur-list space-y-3 text-gray-500 text-sm md:text-base">
+                            <li>Gada Pratama sesuai Peraturan Kapolri</li>
+                            <li>Tupoksi Satpam Turjawali</li>
+                            <li>Drill Tongkat Borgol</li>
+                            <li>Etika Profesi</li>
+                            <li>TPTKP</li>
+                            <li>Penangkapan & Penggeledahan PBB & PPM,dll</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div class="text-primary font-semibold text-lg mb-3">Persyaratan</div>
+                <ul class="brosur-list grid md:grid-cols-2 gap-2 text-gray-500 text-sm md:text-base">
+                    <li>Tinggi Badan minimal 160 cm(pria) dan 155 cm(wanita)</li>
+                    <li>Fotocopy KTP (2 lembar)</li>
+                    <li>Passfoto berwarna ukuran 2x3, 3x4. 4x6 ( masing-masing 4 Lembar) background merah.</li>
+                    <li>Berpendidikan minimal SMA sederajat (fotocopy IjazahTerlegalisir 1 lembar)</li>
+                    <li>Surat Rekomendasi dari perusahaan tempat bekerja (jika masih bekerja di perusahaan)</li>
+                    <li>Fotocopy Surat Keterangan Catatan Kepolisian (SKCK) 1 Lembar</li>
+                    <li>Surat keterangan sehat dari dokter</li>
+                    <li>Surat Keterangan bebas narkoba.</li>
+                </ul>
             </div>
         </div>
     </section>
