add section formulir

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
         </div>
     </section>
-    <section id="brosur" class="-mt-5 mb-10">
+    <section id="brosur" class="-mt-5 mb-20">
         <div class="rgs-container mb-8">
             <div class="text-center text-primary font-semibold text-xl">
                 <p>Pelatihan SATPAM Gada Pratama 2021 - 2022</p>
@@ -356,6 +356,56 @@
                     <li>Surat keterangan sehat dari dokter</li>
                     <li>Surat Keterangan bebas narkoba.</li>
                 </ul>
+            </div>
+        </div>
+    </section>
+    <section class="relative">
+        <img class="absolute left-0 top:0 w-full h-full object-cover opacity-30" src="./assets/img/img-brosur2.png"
+            alt="">
+        <div class="relative rgs-container grid md:grid-cols-2">
+            <div class="space-y-8 py-16">
+                <div class="text-primary">
+                    <div class="font-semibold text-lg mb-3">Tempat Pelatihan</div>
+                    <p>Pusdik Karya Nyata Cinagara, Bogor</p>
+                </div>
+                <div class="text-primary">
+                    <div class="font-semibold text-lg mb-3">Tanggal Pendaftaran</div>
+                    <p> Tanggal 3 Mei 2021 <br> Rencana Pelatihan dimulai: <br> Juni 2021 </p>
+                </div>
+                <div class="text-primary">
+                    <div class="font-semibold text-lg mb-3">Rencana Pelatihan</div>
+                    <p>Juni 2021</p>
+                </div>
+            </div>
+            <div class="bg-primary py-16 px-10 text-white space-y-8">
+                <div>
+                    <div class="font-semibold text-lg mb-3">Informasi & Pendaftaran:</div>
+                    <table>
+                        <tr>
+                            <td class="pr-8">Sumardjo</td>
+                            <td>08129588508</td>
+                        </tr>
+                        <tr>
+                            <td class="pr-8">Santy</td>
+                            <td>081311420919</td>
+                        </tr>
+                    </table>
+                </div>
+                <div>
+                    <div class="font-semibold text-lg mb-3">Tempat Pendaftaran Offline</div>
+                    <p> RAJAWALI GUARD SERVICES <br> Komplek Gading Bukit Indah Blok D No 18<br> Jl. Bukit Gading
+                        Raya,Kelapa Gading Permai,Jakarta Utara 14240<br> Tlp : (021) 4515845 </p>
+                </div>
+                <div>
+                    <div class="font-semibold text-lg mb-3">Pendaftaran Online</div>
+                    <p>Silahkan unduh Formulir Pendaftaran dengan menekan tombol di bawah ini. Isikan Formulir dengan
+                        baik dan benar, lalu email ke <span
+                            class="text-yellow-400">rgs-corporate@rajawaliguardservices.com</span> beserta Soft Copy
+                        dokumen-dokumen lain yang diminta.</p>
+                </div>
+                <button
+                    class="bg-white block w-full rounded-md font-bold text-lg shadow-md text-primary text-center p-8 hover:bg-gray-100 transition-all duration-200">
+                    UNDUH FORMULIR </button>
             </div>
         </div>
     </section>
