add section - manajemen perusahaan

--- a/index.html
+++ b/index.html
@@ -409,6 +409,51 @@
             </div>
         </div>
     </section>
+    <section class="relative overflow-hidden">
+        <img class="w-full lg:hidden h-96 object-cover" src="./assets/img/manajemen-perusahaan-mobile.png" alt="">
+        <img class="absolute hidden lg:inline-block right-0 transform translate-x-1/4 top-1/2 -translate-y-1/2 h-5/6"
+            src="./assets/img/manajemen-perusahaan.png" alt="">
+        <div class="rgs-container">
+            <div class="py-8 lg:py-16">
+                <div class="font-bold text-primary text-lg mb-8">Manajemen Perusahaan</div>
+                <div class="space-y-6">
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">MARSMA TNI PUR IR BR PURBA, MSc</div>
+                        <div class="text-sm">Direktur Utama</div>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">MARSMA TNI PUR DR AGUS MULYADI, SH,MH</div>
+                        <div class="text-sm">Direktur Umum & SDM</div>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">MARSMA TNI PUR SYAHRUDIN DAMANIk,SH,MH</div>
+                        <div class="text-sm">Direktur Keuangan & Marketing</div>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">LETKOL PUR SUMARDJO , SH, MH, MM</div>
+                        <div class="text-sm">Kepala Divisi Jasa Pengamanan</div>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">IRJEN POL PUR EDWARD ARITONANG</div>
+                        <div class="font-bold text-lg">MARSDA TNI PUR SUPOMO</div>
+                        <div class="text-sm">Tenaga Ahli</div>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">AKBP DRS. SUTOYO, MH</div>
+                        <div class="text-sm">Manajer Operasional</div>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">AKBP PUR Agustine</div>
+                        <div class="text-sm">Manajer Diklat</div>
+                    </div>
+                    <div class="space-y-3">
+                        <div class="font-bold text-lg">Letkol Pur Budrie.G. SH</div>
+                        <div class="text-sm">Komandan Satpam</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
