add footer section

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/fonts.css">
     <link rel="stylesheet" href="./assets/css/style.dist.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
 </head>
 
 <body>
@@ -454,6 +454,59 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="relative bg-gradient-to-r from-black via-black to-transparent text-white text-sm py-16">
+            <img style="z-index: -1;" class="absolute right-0 top-0 w-full object-cover h-full"
+                src="./assets/img/footer.png" alt="">
+            <div class="rgs-container grid md:grid-cols-3">
+                <div class="col-span-2">
+                    <img class="w-40 mb-5" src="./assets/img/logo.png" alt="">
+                    <div class="grid md:grid-cols-2 gap-6">
+                        <div class="space-y-6">
+                            <div>
+                                <div class="font-bold mb-2 text-lg">PT. ARYA SHAKTI UTAMA</div>
+                                <p> PT. ARYA SHAKTI UTAMA adalah perusahaan Nasional yang bergerak dalam bidang usaha
+                                    Jasa Keamanan. Didirikan pada tahun 2020, kami bertekad untuk menjadi perusahaan
+                                    yang terkemuka dibidang keamanan serta berpartisipasi dalam mendukung kemajuan
+                                    bisnis klien kami. </p>
+                            </div>
+                            <div>
+                                <div class="font-bold mb-2 text-lg">Head Office</div>
+                                <p> KOMPLEKS GADING BUKIT INDAH BLOK D NO.18 <br> Jalan Bukit Gading Raya Kelapa Gading
+                                    Permai Kelapa Gading Barat, Kelapa Gading - Jakarta Utara DKI Jakarta - Indonesia
+                                    14240 <br> Telp. +6221 4515845 <br>
+                                </p>
+                            </div>
+                        </div>
+                        <div>
+                            <div class="mb-3">
+                                <span class="pr-6"><i class="fas fa-envelope"></i></span>
+                                <span>corporate@pt-aristama.com</span>
+                            </div>
+                            <table>
+                                <tr>
+                                    <td class="pr-6"><i class="fas fa-phone-alt"></i></td>
+                                    <td class="pr-6">Damanik</td>
+                                    <td>0817731048</td>
+                                </tr>
+                                <tr>
+                                    <td class="pr-6"><i class="fas fa-phone-alt"></i></td>
+                                    <td class="pr-6">BR Purba</td>
+                                    <td>0816779552</td>
+                                </tr>
+                                <tr>
+                                    <td class="pr-6"><i class="fas fa-phone-alt"></i></td>
+                                    <td class="pr-6">Sumardjo</td>
+                                    <td>08129588508</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="bg-gray-800 p-6 font-semibold text-center text-white"> PT. ARYA SHAKTI UTAMA 2021 </div>
+    </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./assets/js/index.js"></script>
 </body>
