--- a/index.html
+++ b/index.html
@@ -363,8 +363,8 @@
     <section class="relative">
         <img class="absolute left-0 top:0 w-full h-full object-cover opacity-30" src="./assets/img/img-brosur2.png"
             alt="">
-        <div class="relative rgs-container grid md:grid-cols-2">
-            <div class="space-y-8 py-16">
+        <div class="relative rgs-container px-0 md:px-10 grid md:grid-cols-2">
+            <div class="space-y-8 px-8 md:px-0 py-16">
                 <div class="text-primary">
                     <div class="font-semibold text-lg mb-3">Tempat Pelatihan</div>
                     <p>Pusdik Karya Nyata Cinagara, Bogor</p>
